<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.Frag_Profile"
    android:background="@drawable/back3">

    <ScrollView
        android:layout_width="376dp"
        android:layout_height="407dp"
        android:layout_marginStart="32dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.441">

        <LinearLayout
            android:id="@+id/linearProf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="179dp"
                android:layout_height="112dp"
                android:layout_marginTop="9dp"
                android:src="@mipmap/profile_pic_round" />

            <TextView
                android:id="@+id/name"
                android:layout_width="179dp"
                android:layout_height="38dp"
                android:text="@string/name_"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="302dp" />

            <TextView
                android:id="@+id/mail"
                android:layout_width="177dp"
                android:layout_height="47dp"
                android:text="@string/EMAIL"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="302dp" />

            <TextView
                android:id="@+id/passDis"
                android:layout_width="178dp"
                android:layout_height="42dp"
                android:text="@string/passDis"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="302dp" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="177dp"
                android:layout_height="43dp"
                android:text="@string/Phone" />

            <TextView
                android:id="@+id/location"
                android:layout_width="177dp"
                android:layout_height="44dp"
                android:text="@string/Location" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="177dp"
                android:layout_height="41dp"
                android:text="@string/gender" />

            <RadioButton
                android:id="@+id/male"
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#FDD835"
                android:text="@string/male"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="485dp" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="177dp"
                android:layout_height="44dp"
                android:text="@string/female" />

            <Button
                android:id="@+id/relative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#D81B60"
                android:text="@string/relativeLayout" />

            <Button
                android:id="@+id/logout2"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#D81B60"
                android:text="@string/logout" />
        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>