<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    >


    <LinearLayout
        android:layout_width="313dp"
        android:layout_height="445dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSearch">

        <TextView
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:text="@string/term1"
            android:textColor="#490219"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/second"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/term2"
            android:textColor="#490219"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/third"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/term3"
            android:textColor="#490219"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/fourth"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/term4"
            android:textColor="#490219"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/fifth"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/term5"
            android:textColor="#490219"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sixth"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:text="@string/term6"
            android:textColor="#490219"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/seventh"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/term7"
            android:textColor="#490219"
            android:textSize="18sp" />

    </LinearLayout>

    <SearchView
        android:id="@+id/textSearch"
        android:layout_width="419dp"
        android:layout_height="0dp"
        android:background="#007A3333"
        android:backgroundTint="#003C0101"
        android:queryHint="@string/hintSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>