<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forgot_Password">

    <TextView
        android:id="@+id/f_forgot"
        android:layout_width="139dp"
        android:layout_height="24dp"
        android:layout_marginTop="44dp"
        android:text="@string/forPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/forgetPassDetails"
        android:layout_width="377dp"
        android:layout_height="69dp"
        android:layout_marginTop="8dp"
        android:text="@string/forgotPassDetails"
        app:layout_constraintEnd_toEndOf="@+id/f_forgot"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/f_forgot"
        app:layout_constraintTop_toBottomOf="@+id/f_forgot" />

    <TextView
        android:id="@+id/_email"
        android:layout_width="66dp"
        android:layout_height="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/forgetPassDetails"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/forgetPassDetails"
        app:layout_constraintTop_toBottomOf="@+id/forgetPassDetails" />

    <EditText
        android:id="@+id/_emailIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/emailIn"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/_email"
        app:layout_constraintTop_toBottomOf="@+id/_email" />

    <Button
        android:id="@+id/resetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="40dp"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="@+id/_emailIn"
        app:layout_constraintTop_toBottomOf="@+id/_emailIn" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="171dp"
        android:layout_height="112dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/logo_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>